--- a/examples/coati2/tutorial.ipynb
+++ b/examples/coati2/tutorial.ipynb
@@ -30,7 +30,7 @@
     "    freeze=True,\n",
     "    device=torch.device(\"cuda:0\"),\n",
     "    # model parameters to load.\n",
-    "    doc_url=\"s3://terray-public/models/coati_chiral_e2e_1705431148_1705457063\",\n",
+    "    doc_url=\"s3://terray-public/models/coati_chiral_e2e_1705876432_1705973565.pkl\",\n",
     ")"
    ]
   },
