--- a/examples/tutorial_latest.ipynb
+++ b/examples/tutorial_latest.ipynb
@@ -38,6 +38,7 @@
     "from coati.models.simple_coati2.io import load_coati2\n",
     "\n",
     "# Model parameters are pulled from the url and stored in a local models/ dir\n",
+    "# By default, this is using the CPU -- to use a GPU, comment/uncomment the relevant lines below\n",
     "\n",
     "encoder1, tokenizer1 = load_e3gnn_smiles_clip_e2e(\n",
     "    freeze=True,\n",
@@ -54,15 +55,8 @@
     "    force_cpu=True, # USE FOR CPU\n",
     "    # model parameters to load.\n",
     "    doc_url=\"s3://terray-public/models/coati2_chiral_03-08-24.pkl\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "# function to run unconditional generation from a single SMILES\n",
     "def gen_mol(smiles, coati_version = 1, num_variations = 100, noise_scale = 0.15):\n",
     "\n",
@@ -103,6 +97,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Input a SMILES string"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -122,6 +123,13 @@
    "source": [
     "smiles_str = \"CC1=C(C2=C(O1)C=C(C=C2)OC3=NC=NC4=CC(=C(C=C43)OC)OC)C(=O)NC\"\n",
     "MolFromSmiles(smiles_str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 100 generations using COATI1 with a noise of 0.05"
    ]
   },
   {
@@ -148,8 +156,14 @@
     }
    ],
    "source": [
-    "# noise of 0.05 w/ COATI1\n",
     "unique_valid_smiles_0p05_1 = gen_mol(smiles_str, coati_version = 1, num_variations = 100, noise_scale = 0.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 100 generations using COATI2 with a noise of 0.05"
    ]
   },
   {
@@ -176,8 +190,14 @@
     }
    ],
    "source": [
-    "# noise of 0.05 w/ COATI2\n",
     "unique_valid_smiles_0p05_2 = gen_mol(smiles_str, coati_version = 2, num_variations = 100, noise_scale = 0.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 100 generations using COATI1 with a noise of 0.15"
    ]
   },
   {
@@ -204,8 +224,14 @@
     }
    ],
    "source": [
-    "# noise of 0.15 w/ COATI1\n",
     "unique_valid_smiles_0p15_1 = gen_mol(smiles_str, coati_version = 1, num_variations = 100, noise_scale = 0.15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 100 generations using COATI2 with a noise of 0.15"
    ]
   },
   {
@@ -232,8 +258,14 @@
     }
    ],
    "source": [
-    "# noise of 0.15 w/ COATI2\n",
     "unique_valid_smiles_0p15_2 = gen_mol(smiles_str, coati_version = 2, num_variations = 100, noise_scale = 0.15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 100 generations using COATI1 with a noise of 0.25"
    ]
   },
   {
@@ -265,6 +297,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 100 generations using COATI2 with a noise of 0.25"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -293,6 +332,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 100 generations using COATI1 with a noise of 0.5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -318,6 +364,13 @@
    "source": [
     "# noise of 0.5 w/ COATI1\n",
     "unique_valid_smiles_0p5_1 = gen_mol(smiles_str, coati_version = 1, num_variations = 100, noise_scale = 0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 100 generations using COATI2 with a noise of 0.5"
    ]
   },
   {
