--- a/examples/tutorial_simple_gen.ipynb
+++ b/examples/tutorial_simple_gen.ipynb
@@ -57,17 +57,17 @@
     "    doc_url=\"s3://terray-public/models/coati2_chiral_03-08-24.pkl\",\n",
     ")\n",
     "\n",
-    "# function to run unconditional generation from a single SMILES\n",
+    "# Function to run unconditional generation from a single SMILES\n",
     "def gen_mol(smiles, coati_version = 1, num_variations = 100, noise_scale = 0.15):\n",
     "\n",
-    "    # embed the SMILES\n",
+    "    # Embed the SMILES\n",
     "    smiles = CanonSmiles(smiles)\n",
     "    if coati_version == 1:\n",
     "        vector = embed_smiles(smiles, encoder1, tokenizer1)\n",
     "    elif coati_version == 2:\n",
     "        vector = embed_smiles(smiles, encoder2, tokenizer2)\n",
     "\n",
-    "    # noise is added as an isotropic Gaussian with std=noise_scale\n",
+    "    # Noise is added as an isotropic Gaussian with std=noise_scale\n",
     "    if coati_version == 1:\n",
     "        nearby_smiles = encoder1.hclip_to_2d_batch(\n",
     "            h_clip=vector.unsqueeze(0).repeat(num_variations, 1),\n",
@@ -122,6 +122,7 @@
    ],
    "source": [
     "smiles_str = \"CC1=C(C2=C(O1)C=C(C=C2)OC3=NC=NC4=CC(=C(C=C43)OC)OC)C(=O)NC\"\n",
+    "# This is fruquintinib (Takeda); got it from https://drughunter.com/articles/2023-novel-small-molecule-fda-drug-approvals/\n",
     "MolFromSmiles(smiles_str)"
    ]
   },
